--- a/src/main/resources/static/css/formfirst.css
+++ b/src/main/resources/static/css/formfirst.css
@@ -43,15 +43,6 @@ form {
   margin: 50px 0;
 }
 
-h1 {
-  color: #474544;
-  font-size: 32px;
-  font-weight: 700;
-  letter-spacing: 7px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
 .underline {
   border-bottom: solid 2px #474544;
   margin: -0.512em auto;
@@ -158,14 +149,14 @@ textarea {
 	color: #474544;
 }
 
-#form_button {
+.form_button {
   background: none;
   border: solid 2px #474544;
   color: #474544;
   cursor: pointer;
   display: inline-block;
   font-family: 'Helvetica', Arial, sans-serif;
-  font-size: 0.875em;
+  font-size: 0.700em;
   font-weight: bold;
   outline: none;
   padding: 20px 35px;
@@ -175,11 +166,15 @@ textarea {
 	-ms-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	transition: all 0.3s;
+    position: relative;
+    left: 1px;
+   margin: 5px auto;
 }
 
-#form_button:hover {
+.form_button:hover {
   background: #474544;
   color: #F2F3EB;
+
 }
 
 @media screen and (max-width: 768px) {
@@ -230,5 +225,5 @@ textarea {
     size: 100px;
     position: absolute;
     left: 600px;
-    top: 50px;
+    top: 100px;
 }
