--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -17,6 +17,11 @@ body {
   height: 100vh;
 }
 
+
+h1 {
+  font-size: 2.4em;
+  margin: 0.67em 0;
+}
 .user {
   width: 90%;
   max-width: 340px;
@@ -24,14 +29,28 @@ body {
 }
 
 .user__header {
+  text-align: left;
+  opacity: 0;
+  -webkit-transform: translate3d(0, 500px, 0);
+  transform: translate3d(0, 500px, 0);
+  -webkit-animation: arrive 500ms ease-in-out 0.7s forwards;
+  animation: arrive 500ms ease-in-out 0.7s forwards;
+  text-shadow: 1px 1px gray;
+  margin-top: 50px;
+  margin-left: 200px;
+
+  }
+
+.user_cent_header {
   text-align: center;
   opacity: 0;
   -webkit-transform: translate3d(0, 500px, 0);
   transform: translate3d(0, 500px, 0);
   -webkit-animation: arrive 500ms ease-in-out 0.7s forwards;
   animation: arrive 500ms ease-in-out 0.7s forwards;
- text-shadow: 1px 1px gray;
-  }
+  text-shadow: 1px 1px gray;
+
+}
 
 .user__title {
   font-size: 14px;
@@ -74,6 +93,7 @@ body {
   background: #f7f7f7;
 }
 
+
 .btn {
   display: block;
   width: 100%;
@@ -90,6 +110,8 @@ body {
 .btn:hover {
   background: #a09486;
 }
+
+
 
 @-webkit-keyframes NO {
   from, to {
