Изменил css для всех страниц

--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -8,12 +8,8 @@
 body {
   font-family: "Roboto";
   font-size: 14px;
-  background-size: 200% 100% !important;
-  -webkit-animation: move 10s ease infinite;
-  animation: move 10s ease infinite;
   -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
+  background-color: #91ced4;
   height: 100vh;
 }
 
