Add check role users for page

--- a/src/main/resources/static/css/formfirst.css
+++ b/src/main/resources/static/css/formfirst.css
@@ -171,6 +171,29 @@ textarea {
    margin: 5px auto;
 }
 
+.form_disabled {
+    background: none;
+    border: solid 2px #696969;
+    color: #696969;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Helvetica', Arial, sans-serif;
+    font-size: 0.700em;
+    font-weight: bold;
+    outline: none;
+    padding: 20px 35px;
+    text-transform: uppercase;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    position: relative;
+    left: 1px;
+    margin: 5px auto;
+}
+
+
 .form_button:hover {
   background: #474544;
   color: #F2F3EB;
