--- a/src/main/resources/static/css/tableMini.css
+++ b/src/main/resources/static/css/tableMini.css
@@ -44,7 +44,7 @@ button, input, select, textarea {
     max-width: calc(100% - 2em);
     margin: 1em auto;
     overflow: hidden;
-    width: 800px;
+
 
     top:50px;
 }
@@ -67,7 +67,7 @@ button, input, select, textarea {
     transition: all 0.3s;
     position: relative;
     top:70px;
-    left: 700px;
+    left: 800px;
     margin: 20px auto;
 }
 
@@ -77,6 +77,32 @@ button, input, select, textarea {
 
 }
 
+.form_button_admin {
+    background: none;
+    border: solid 2px #474544;
+    color: #474544;
+    cursor: pointer;
+    font-family: 'Helvetica', Arial, sans-serif;
+    font-size: 0.700em;
+    font-weight: bold;
+    outline: none;
+    padding: 15px 35px;
+    text-transform: uppercase;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    position: relative;
+    top:20px;
+    left: 20px;
+    margin: 20px auto;
+}
+.form_button_admin:hover {
+    background: #474544;
+    color: #F2F3EB;
+
+}
 
 .form_disabled {
 
@@ -97,7 +123,7 @@ button, input, select, textarea {
     transition: all 0.3s;
     position: relative;
     top:70px;
-    left: 700px;
+    left: 800px;
     margin: 20px auto;
 
 
@@ -107,7 +133,7 @@ table {
     width: 30%;
     position: absolute;
     top: 100px;
-    left: 120px;
+    left: 250px;
 
 }
 
