--- a/src/main/resources/static/css/tablecars.css
+++ b/src/main/resources/static/css/tablecars.css
@@ -65,10 +65,37 @@ button, input, select, textarea {
     transition: all 0.3s;
     position: relative;
     top:70px;
-    left: 700px;
+    left: 800px;
     margin: 20px auto;
 }
 
+.form_button_admin {
+    background: none;
+    border: solid 2px #474544;
+    color: #474544;
+    cursor: pointer;
+    font-family: 'Helvetica', Arial, sans-serif;
+    font-size: 0.700em;
+    font-weight: bold;
+    outline: none;
+    padding: 15px 35px;
+    text-transform: uppercase;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    position: relative;
+    top:20px;
+    left: 20px;
+    margin: 20px auto;
+}
+
+.form_button_admin:hover {
+    background: #474544;
+    color: #F2F3EB;
+
+}
 .form_button:hover {
     background: #474544;
     color: #F2F3EB;
@@ -95,7 +122,7 @@ button, input, select, textarea {
     transition: all 0.3s;
     position: relative;
     top:70px;
-    left: 700px;
+    left: 800px;
     margin: 20px auto;
 
 
@@ -105,7 +132,7 @@ table {
     width: 70%;
     position: absolute;
     top: 100px;
-    left: 220px;
+    left: 270px;
 
 }
 
