--- a/src/main/resources/static/css/tableMini.css
+++ b/src/main/resources/static/css/tableMini.css
@@ -44,8 +44,6 @@ button, input, select, textarea {
     max-width: calc(100% - 2em);
     margin: 1em auto;
     overflow: hidden;
-
-
     top:50px;
 }
 
@@ -66,8 +64,8 @@ button, input, select, textarea {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
-    top:70px;
-    left: 850px;
+    top: 160px;
+    left: 45%;
     margin: 20px auto;
 }
 
@@ -94,8 +92,8 @@ button, input, select, textarea {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
-    top:20px;
-    left: 20px;
+    top: 15%;
+    left: 5%;
     margin: 20px auto;
 }
 .form_button_admin:hover {
@@ -122,24 +120,24 @@ button, input, select, textarea {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
-    top:70px;
-    left: 850px;
+    top: 160px;
+    left: 45%;
     margin: 20px auto;
 
 
 }
 
 table {
-    width: 30%;
+    width: 40%;
     position: absolute;
-    top: 100px;
-    left: 250px;
+    top: 20%;
+    left: 2%;
 
 }
 
 table td, table th {
     color: #2b686e;
-    padding: 10px;
+    padding: 2%;
 }
 table td {
     text-align: center;
