--- a/src/main/resources/static/css/tableOrders.css
+++ b/src/main/resources/static/css/tableOrders.css
@@ -33,10 +33,10 @@ img {
 }
 
 table {
-  width: 80%;
+  width: 70%;
   position: absolute;
-  top: 100px;
-  left: 200px;
+  top: 12%;
+  left: 20%;
 
 }
 
