--- a/src/main/resources/static/css/tablecars.css
+++ b/src/main/resources/static/css/tablecars.css
@@ -64,9 +64,9 @@ button, input, select, textarea {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
-    top:70px;
-    left: 800px;
-    margin: 20px auto;
+    top:12%;
+    left: 80%;
+
 }
 
 .form_button_admin {
@@ -86,8 +86,8 @@ button, input, select, textarea {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
-    top:20px;
-    left: 20px;
+    top:12%;
+    left: 60%;
     margin: 20px auto;
 }
 
@@ -121,8 +121,8 @@ button, input, select, textarea {
     -o-transition: all 0.3s;
     transition: all 0.3s;
     position: relative;
-    top:70px;
-    left: 800px;
+    top:12%;
+    left: 60%;
     margin: 20px auto;
 
 
@@ -131,8 +131,8 @@ button, input, select, textarea {
 table {
     width: 70%;
     position: absolute;
-    top: 100px;
-    left: 270px;
+    top: 12%;
+    left: 25%;
 
 }
 
